- try a fix for no corner radius showing in the songbar image -- kaneryu on 2025-01-06
- Fix random application crash by not directly accessing song object that lives in a different thread using QML. -- kaneryu on 2025-01-07
- fix bug where QML didn't recive the song object properly -- kaneryu on 2025-01-08



# Version 0.13

## New Features

- Improve songbar, add threading to non-async bgworker, refactor some stuff -- kaneryu on 2025-01-02

## Bugfixes

- added fault tolerance to convertocover by making sure that cache is always set to a real cache instead of None -- kaneryu on 2025-01-03
- added fault tolerance to the queue by allowing it to ask for a song's data to be refetched. -- kaneryu on 2025-01-04



# Version 0.12

## New Features

- complete alpha songbar -- kaneryu on 2024-12-26



# Version 0.11

## New Features

- Added song cover, song details to the songbar -- kaneryu on 2024-12-25



# Version 0.10

## New Features

- add prelim stuff for songbar -- kaneryu on 2024-12-23



# Version 0.9

## New Features

- add pages to the app using a URL scheme, with innertune:// as the protocol -- kaneryu on 2024-12-21

## Bugfixes

- add versions as datafiles, add app icon to app. -- kaneryu on 2024-12-22



# Version 0.8

## New Features

- added images to search results in QML, also refactored a few things to do so. -- kaneryu on 2024-12-21

## Bugfixes

- fix version file not being found causing application crash -- kaneryu on 2024-12-21



# Version 0.7

## New Features

- added autoversioning using conventional commits -- kaneryu on 2024-12-19

## Bugfixes

- clean up autover.py for use in commit hooks -- kaneryu on 2024-12-19
- fix bug in autover where commit history was reversed. -- kaneryu on 2024-12-19



# Version 0.6

## New Features

- Added preliminary version of search, and made connection the the UI. it can also play songs from the results. -- kaneryu on 2024-12-19



# Version 0.5

## New Features
